<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DetailSpecificRoom">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="306dp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="17dp"
            android:gravity="bottom"
            android:padding="10dip"
            app:centered="true"
            app:fillColor="#df0623"
            app:pageColor="#fff"
            app:snap="false" />
    </RelativeLayout>











    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="378dp">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="158dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="341dp"
            android:text="@string/room_number" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="163dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="246dp"
            android:layout_marginBottom="312dp"
            android:text="@string/room_type" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="162dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="248dp"
            android:layout_marginBottom="281dp"
            android:text="@string/standard_occupancy" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="158dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="252dp"
            android:layout_marginBottom="253dp"
            android:text="@string/maximum_occupancy" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="159dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="155dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="195dp"
            android:text="@string/per_extra_person" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="159dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="252dp"
            android:layout_marginBottom="221dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="162dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="217dp"
            android:layout_marginEnd="248dp"
            android:layout_marginBottom="128dp"
            android:text="@string/smoking" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="159dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="163dp"
            android:text="@string/jacuzzi" />

        <Button
            android:id="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="284dp"
            android:layout_marginTop="253dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="74dp"
            android:text="@string/book"
            android:onClick="btn_Click2"
            style="@style/buttons"
            android:background="@drawable/custom"
            />

    </RelativeLayout>
</LinearLayout>


