<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">


    <TableLayout
        android:layout_width="385dp"
        android:layout_height="699dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:text="@string/first_name"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="15dp" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="13dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="15dp" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="13dp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                android:hint="@string/username_customer"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="confirm Password"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rewritePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:ems="10"
                android:inputType="phone"
                tools:ignore="MissingConstraints" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/signUpbutton4"
                android:layout_marginStart="100dp"
                android:onClick="btnOnclickSignUp"
                android:text="@string/signup"
                style="@style/buttons"
                android:background="@drawable/custom"
                />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>